--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ title:
 <div id="home">
   <h2><i class="icon-bookmark"></i> Blog Posts</h2>
   <ul id="blog-posts" class="posts">
-    {% for post in site.categories.blog %}
+    {% for post in site.posts %}
       <li><span>{{ post.date | date: "%Y-%m-%d"  }} &raquo;</span><a href="{{ post.url }}">{{ post.title }}</a></li>
  	{% endfor %}
   </ul>
