--- a/index.html
+++ b/index.html
@@ -2,7 +2,11 @@
 layout: default
 ---
 
-<div roll="main" class="main">
-<p class="hello">Hello, world!</p>
+ <div roll="main" class="secondary">
+		<p>Hello, I am levey.</p>
 
-</div>
+		<p>This is a site about my blog posts and productions.</p>
+
+		<p>Welcome!</p>
+
+	</div>
