--- a/contact.html
+++ b/contact.html
@@ -2,6 +2,20 @@
 layout: default
 ---
 
+
+<header>
+  
+  <h1><a href="/">Levey</a></h1>
+  <p>Programmer / Freelancer / Reader </p>
+  
+  <ul id="nav" class="navigation" >
+		<li><a href="./products.html">Products</a></li>
+		<li class="on"><a  href="./contact.html">Contact</a></li>
+		<li><a href="./blog.html">Blog</a></li>
+	</ul>
+</header>
+
+
  <div roll="main" class="secondary">
  	 <h4>You can contact me in the ways shown below:</h4>
  	 <br />
