--- a/products.html
+++ b/products.html
@@ -3,12 +3,18 @@ layout: default
 ---
 
 
-<script language="javascript" type="text/javascript">
 
-$('#nav.li')(0).class("on");
-
-
-</script>
+<header>
+  
+  <h1><a href="/">Levey</a></h1>
+  <p>Programmer / Freelancer / Reader </p>
+  
+  <ul id="nav" class="navigation" >
+		<li class="on"><a href="./products.html">Products</a></li>
+		<li><a  href="./contact.html">Contact</a></li>
+		<li><a href="./blog.html">Blog</a></li>
+	</ul>
+</header>
 
  <div roll="main" class="secondary">
        <p>Tap an icon to download</p>
