--- a/index.html
+++ b/index.html
@@ -2,6 +2,19 @@
 layout: default
 ---
 
+
+<header>
+  
+  <h1><a href="/">Levey</a></h1>
+  <p>Programmer / Freelancer / Reader </p>
+  
+  <ul id="nav" class="navigation" >
+		<li><a href="./products.html">Products</a></li>
+		<li><a  href="./contact.html">Contact</a></li>
+		<li><a href="./blog.html">Blog</a></li>
+	</ul>
+</header>
+
  <div roll="main" class="secondary">
 		<p>Hello, I am levey.</p>
 
