--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@ layout: default
  	 <br />
 			<p>Email: <A HREF="mailto:levey.zhu@gmail.com">
 levey.zhu@gmail.com</A></p>
-			<p>Twitter: <a href="https://twitter.com/LeveyZhu" target="_blank">@LeveyZhu</a></p>
+			<p>Twitter: <a href="https://twitter.com/LeveyZhu" target="_blank">@leveyzhu</a></p>
 			<p>Weibo: <a href="http://weibo.com/leveyzhu" target="_blank">@Levey</a></p>
   </div>
 
