--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ layout: default
 <header>
   
   <h1><a href="/">Levey</a></h1>
-  <p>Programmer / Freelancer / Reader </p>
+  <p><span class="programmer">Programmer</span> / Freelancer / Reader </p>
   
   <ul id="nav" class="navigation" >
 		<li><a href="./products.html">Products</a></li>
@@ -16,7 +16,7 @@ layout: default
 </header>
 
  <div roll="main" class="secondary">
-		<p>Hello, I am levey.</p>
+		<p>Hello, I am Levey.</p>
 
 		<p>This is a site about my blog posts and productions.</p>
 
