--- a/products.html
+++ b/products.html
@@ -21,18 +21,18 @@ layout: default
 		
 		<ul class="pass-icons">
 					<li>
-						<a target="_blank" href="http://itunes.apple.com/us/app/photostring/id487645953?ls=1&mt=8"><img src="http://s1.homezz.com/201201/2509/15609_o.png" />
+						<a target="_blank" href="http://itunes.apple.com/us/app/photostring/id487645953?ls=1&mt=8"><img src="http://i.imgur.com/Jys2jHN.png" />
 						<span>PhotoString</span></a>
 					</li>
 					<input type="hidden" name="templatess_templates" value="1">
 					<li>
-						<a target="_blank" href="http://itunes.apple.com/us/app/photostring-free/id493950579?ls=1&mt=8"><img src="http://s2.homezz.com/201202/2509/17628_o.png" />
+						<a target="_blank" href="http://itunes.apple.com/us/app/photostring-free/id493950579?ls=1&mt=8"><img src="http://i.imgur.com/o5pnF0F.png" />
 						<span>PhotoString Free</span></a>
 							
 					</li>
 
 					<li>
-						<a target="_blank" href="http://itunes.apple.com/us/app/remain/id522311344?ls=1&mt=8"><img src="http://s0.homezz.com/201204/2509/20976_o.png" />
+						<a target="_blank" href="http://itunes.apple.com/us/app/remain/id522311344?ls=1&mt=8"><img src="http://i.imgur.com/Jaw8XSo.png" />
 						<span>Remain</span></a>
 							
 					</li>
