--- a/contact.html
+++ b/contact.html
@@ -17,11 +17,30 @@ layout: default
 
 
  <div roll="main" class="secondary">
- 	 <h4>You can contact me in the ways shown below:</h4>
- 	 <br />
-			<p><span class="contactlabel">Email:</span> <a HREF="mailto:levey.zhu@gmail.com">levey.zhu@gmail.com</a></p>
-			<p><span class="contactlabel">Twitter:</span> <a href="https://twitter.com/LeveyZhu" target="_blank">@leveyzhu</a></p>
-			<p><span class="contactlabel">Weibo:</span> <a href="http://weibo.com/leveyzhu" target="_blank">@Levey</a></p>
+ 	<!-- <h4>You can contact me in the ways shown below:</h4> -->
+  <div class="contact-icons">
+    <div class="contact-icon">
+      <a href="mailto:levey.zhu@gmail.com">
+        <i class="icon-email"></i>
+      </a>
+    </div>
+    <div class="contact-icon">
+      <a href="https://twitter.com/LeveyZhu" target="_blank">
+         <i class="icon-twitter"></i>
+      </a>
+    </div>
+
+    <div class="contact-icon">
+      <a href="https://github.com/levey" target="_blank">
+         <i class="icon-github-circled"></i>
+      </a>
+    </div>
+    <div class="contact-icon">
+		  <a href="http://weibo.com/leveyzhu" target="_blank">
+         <i class="icon-weibo"></i>
+      </a>
+    </div>
+  </div>
   </div>
 
 
