--- a/contact.html
+++ b/contact.html
@@ -16,8 +16,7 @@ layout: default
 </header>
 
 
- <div roll="main" class="secondary">
- 	<!-- <h4>You can contact me in the ways shown below:</h4> -->
+ <div class="secondary">
   <div class="contact-icons">
     <div class="contact-icon">
       <a href="mailto:levey.zhu@gmail.com">
