--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ layout: default
 	</ul>
 </header>
 
- <div roll="main" class="secondary">
+ <div class="secondary">
 		<p>Hello, I am Levey.</p>
 
 		<p>This is a site about my blog posts and productions.</p>
