--- a/blog.html
+++ b/blog.html
@@ -16,8 +16,8 @@ layout: default
 </header>
 
 
-<div roll="main" class="secondary">
-  <h4>Blog Posts</h4>
+<div class="secondary">
+  <h4>Posts</h4>
     <ul id="blog-posts" class="posts">
     {% for post in site.posts %}
       <li><span>{{ post.date | date: "%Y-%m-%d"  }} &raquo;</span><a href="{{ post.url }}">{{ post.title }}</a></li>
