--- a/index.html
+++ b/index.html
@@ -16,10 +16,11 @@ layout: default
 </header>
 
  <div class="secondary">
-		<p>Hello, I am Levey.</p>
-
-		<p>This is a site about my blog posts and productions.</p>
-
-		<p>Welcome!</p>
-
-	</div>
+  <div class="self-description">
+    <h3>About</h3>
+    <p>Levey is an iOS Developer in Hangzhou China.</p>
+    <p>This is a site about his blog posts and products.</p>
+    <p>He started iOS / Mac development from 2009, and also do Web Development.</p>
+    <p>He wants to make more firends, please feel free to contact him from the "Contact" tab.</p>
+  </div>
+</div>
