--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@ layout: default
 
 <header>
   
-  <h1><a href="/">Levey</a></h1>
+  <h1><a id="headerlink" href="/"><span id="l" class="levey">L</span>evey</a></h1>
   <p>Programmer / Freelancer / Reader </p>
   
   <ul id="nav" class="navigation" >
@@ -35,11 +35,11 @@ layout: default
       </a>
     </div>
     <div class="contact-icon">
-		  <a href="http://weibo.com/leveyzhu" target="_blank">
+  	  <a href="http://weibo.com/leveyzhu" target="_blank">
          <i class="icon-weibo"></i>
       </a>
     </div>
   </div>
-  </div>
+</div>
 
 
