--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ layout: default
 
 <header>
   
-  <h1><a href="/">Levey</a></h1>
+  <h1><a id="headerlink" href="/"><span id="l" class="levey">L</span>evey</a></h1>
   <p><span class="programmer">Programmer</span> / Freelancer / Reader </p>
   
   <ul id="nav" class="navigation" >
@@ -24,3 +24,5 @@ layout: default
     <p>He wants to make more firends, please feel free to contact him from the "Contact" tab.</p>
   </div>
 </div>
+
+<script>$('#l').css('color', '#0090FF');$('#headerlink').unbind('hover');</script>
