--- a/products.html
+++ b/products.html
@@ -6,7 +6,7 @@ layout: default
 
 <header>
   
-  <h1><a href="/">Levey</a></h1>
+  <h1><a id="headerlink" href="/"><span id="l" class="levey">L</span>evey</a></h1>
   <p>Programmer / Freelancer / Reader </p>
   
   <ul id="nav" class="navigation" >
