--- a/index.html
+++ b/index.html
@@ -18,9 +18,10 @@ layout: default
  <div class="secondary">
   <div class="self-description">
     <h3>About</h3>
-    <p>Levey is an iOS Developer in Hangzhou China.</p>
+    <p>Levey is a full stack developer in Hangzhou China.</p>
     <p>This is a site about his blog posts and products.</p>
-    <p>He started iOS / Mac development from 2009, and also do Web Development.</p>
+    <p>He started iOS / Mac development from 2009, and is still excited with it.</p>
+    <p>He also love web development, Front-End, Node.js, Ruby are in his toolbelt. </p>
     <p>He wants to make more firends, please feel free to contact him from the "Contact" tab.</p>
   </div>
 </div>
