--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@ layout: default
 <header>
   
   <h1><a id="headerlink" href="/"><span id="l" class="levey">L</span>evey</a></h1>
-  <p>Programmer / Freelancer / Reader </p>
+  <p>Programmer / Gamer / Reader </p>
   
   <ul id="nav" class="navigation" >
 		<li><a href="./products.html">Products</a></li>
