--- a/products.html
+++ b/products.html
@@ -7,7 +7,7 @@ layout: default
 <header>
   
   <h1><a id="headerlink" href="/"><span id="l" class="levey">L</span>evey</a></h1>
-  <p>Programmer / Freelancer / Reader </p>
+  <p>Programmer / Gamer / Reader </p>
   
   <ul id="nav" class="navigation" >
 		<li class="on"><a href="./products.html">Products</a></li>
