--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@ layout: default
     <p>This is a site about his blog posts and products.</p>
     <p>He started iOS / Mac development from 2009, and is still excited with it.</p>
     <p>He also love web development, Front-End, Node.js, Ruby are in his toolbelt. </p>
+    <p>He love Video Games so much, especially Action Adventures Games. </p>
     <p>He wants to make more firends, please feel free to contact him from the "Contact" tab.</p>
   </div>
 </div>
