--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@ layout: default
 
 
 <header>
-  
+
   <h1><a id="headerlink" href="/"><span id="l" class="levey">L</span>evey</a></h1>
   <p><span class="programmer">Programmer</span> / Gamer / Reader </p>
-  
+
   <ul id="nav" class="navigation" >
 		<li><a href="./products.html">Products</a></li>
 		<li><a  href="./contact.html">Contact</a></li>
@@ -21,9 +21,9 @@ layout: default
     <p>Levey is a full stack developer in Hangzhou China.</p>
     <p>This is a site about his blog posts and products.</p>
     <p>He started iOS / Mac development from 2009, and is still excited with it.</p>
-    <p>He also love web development, Front-End, Node.js, Ruby are in his toolbelt. </p>
+    <p>He also love web development, Front-End, Node.js, Ruby/Rails, etc. </p>
     <p>He love Video Games so much, especially Action Adventures Games. </p>
-    <p>He wants to make more firends, please feel free to contact him from the "Contact" tab.</p>
+    <p>He wants to make more firends, please feel free to contact him from the "Contact" link.</p>
   </div>
 </div>
 
