--- a/index.html
+++ b/index.html
@@ -20,9 +20,8 @@ layout: default
     <h3>About</h3>
     <p>Levey is a full stack developer in Hangzhou China.</p>
     <p>This is a site about his blog posts and products.</p>
-    <p>He started iOS / Mac development from 2009, and is still excited with it.</p>
+    <p>He started iOS / Mac development from 2009, and is still exciting with it.</p>
     <p>He also love web development, Front-End, Node.js, Ruby/Rails, etc. </p>
-    <p>He love Video Games so much, especially Action Adventures Games. </p>
     <p>He wants to make more firends, please feel free to contact him from the "Contact" link.</p>
   </div>
 </div>
