--- a/resume.html
+++ b/resume.html
@@ -122,6 +122,9 @@ pre {
     border: 1px solid #e8e8e8;
     white-space: pre-wrap;
     word-wrap: break-word;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    border-radius: 4px;
 }
 pre code {
     background-color: #fff;
