--- a/resume.html
+++ b/resume.html
@@ -290,9 +290,9 @@ An iOS 、OS X development forum, hosting on Heroku, little and clean, build wit
 
 <hr />
 
-<h3>Contact Me</h3>
+<h3>Contacts</h3>
 
-<p>If you are interested about me, you can contact me in the ways shown below.</p>
+<p>If you are interested about me, you can contact me by these ways:</p>
 
 <p><strong>Phone</strong>: +86 18667121397</p>
 
