--- a/cv.html
+++ b/cv.html
@@ -292,7 +292,7 @@ An iOS 、OS X development forum, hosting on Heroku, little and clean, build wit
 
 <h3>Contacts</h3>
 
-<p>If you are interested about me, you can contact me by these ways:</p>
+<p>If you want to contact me, please call me or send an email.</p>
 
 <p><strong>Phone</strong>: +86 18667121397</p>
 
