--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@ layout: default
  <div class="secondary">
   <div class="self-description">
     <h3>About</h3>
-    <p>Levey is a full stack developer in Hangzhou China.</p>
+    <p>Levey is an iOS developer in Hangzhou China.</p>
     <p>This is a site about his blog posts and products.</p>
-    <p>He started iOS / Mac development from 2009, and is still exciting with it.</p>
+    <p>He started iOS/Mac development from 2009, and is still exciting with it.</p>
     <p>He also love web development, Front-End, Node.js, Ruby/Rails, etc. </p>
     <p>He wants to make more firends, please feel free to contact him from the "Contact" link.</p>
   </div>
