--- a/resume_cn.html
+++ b/resume_cn.html
@@ -180,7 +180,7 @@ sup {
 
 <h4>项目经验</h4>
 
-<p>以下是我做过的一些项目，按时间靠近排序， 带 ★ 标记为我个人在业余时间开发。带 * 标记为我个人在业余时间开发。</p>
+<p>以下是我做过的一些项目，按时间靠近排序， 带 ★ 标记为我正在参与。带 * 标记为我个人在业余时间开发。</p>
 
 <p><em>如果标题为蓝色链接，说明此 app 已在 App Store 上，或者部署在线上的网站, 你可以点击浏览。</em></p>
 
@@ -295,7 +295,7 @@ sup {
 
 <p><strong>手机</strong>: +86 18667121397</p>
 
-<p><strong>邮箱</strong>: <a href="&#109;&#97;&#105;&#x6c;&#116;&#111;&#x3a;&#x6c;&#x65;&#118;&#101;&#121;&#46;&#x7a;&#x68;&#117;&#x40;&#x67;&#109;&#x61;&#105;&#x6c;&#46;&#99;&#x6f;&#x6d;">&#108;&#x65;&#x76;&#x65;&#121;&#x2e;&#x7a;&#104;&#117;&#x40;&#103;&#x6d;&#97;&#105;&#x6c;&#46;&#99;&#111;&#109;</a></p>
+<p><strong>邮箱</strong>: <a href="&#x6d;&#97;&#105;&#108;&#116;&#111;&#58;&#x6c;&#101;&#x76;&#101;&#x79;&#46;&#x7a;&#104;&#x75;&#64;&#103;&#x6d;&#x61;&#x69;&#108;&#46;&#x63;&#x6f;&#109;">&#108;&#101;&#118;&#101;&#121;&#x2e;&#122;&#104;&#117;&#64;&#103;&#109;&#x61;&#105;&#108;&#x2e;&#99;&#111;&#109;</a></p>
 
 <p><strong>QQ</strong>: 286837453</p>
 
