--- a/resume_cn.html
+++ b/resume_cn.html
@@ -180,9 +180,9 @@ sup {
 
 <h4>项目经验</h4>
 
-<p>以下是我做过的一些项目，按时间靠近排序， 带 ★ 标记为我正在参与。带 * 标记为我个人在业余时间开发。</p>
+<p>以下是我做过的一些项目，按时间靠近排序， 带 ★ 标记为我正在参与，带 * 标记为我个人在业余时间开发。</p>
 
-<p><em>如果标题为蓝色链接，说明此 app 已在 App Store 上，或者部署在线上的网站, 你可以点击浏览。</em></p>
+<p><em>如果标题为蓝色链接，说明此 App 已在 App Store 上，或者部署在线上的网站, 你可以点击浏览。</em></p>
 
 <p><a href="https://itunes.apple.com/cn/app/tao-bao/id387682726?mt=8"><strong> ★ 手机淘宝 </strong></a></p>
 
@@ -295,7 +295,7 @@ sup {
 
 <p><strong>手机</strong>: +86 18667121397</p>
 
-<p><strong>邮箱</strong>: <a href="&#x6d;&#97;&#105;&#108;&#116;&#111;&#58;&#x6c;&#101;&#x76;&#101;&#x79;&#46;&#x7a;&#104;&#x75;&#64;&#103;&#x6d;&#x61;&#x69;&#108;&#46;&#x63;&#x6f;&#109;">&#108;&#101;&#118;&#101;&#121;&#x2e;&#122;&#104;&#117;&#64;&#103;&#109;&#x61;&#105;&#108;&#x2e;&#99;&#111;&#109;</a></p>
+<p><strong>邮箱</strong>: <a href="&#x6d;&#x61;&#x69;&#x6c;&#x74;&#x6f;&#x3a;&#x6c;&#101;&#x76;&#x65;&#121;&#x2e;&#x7a;&#x68;&#117;&#x40;&#103;&#x6d;&#x61;&#105;&#x6c;&#x2e;&#x63;&#111;&#109;">&#x6c;&#x65;&#x76;&#101;&#x79;&#46;&#122;&#104;&#x75;&#x40;&#x67;&#x6d;&#97;&#x69;&#108;&#x2e;&#x63;&#111;&#109;</a></p>
 
 <p><strong>QQ</strong>: 286837453</p>
 
