--- a/resume_cn.html
+++ b/resume_cn.html
@@ -184,7 +184,7 @@ sup {
 
 <p><em>如果标题为蓝色链接，说明此 App 已在 App Store 上，或者部署在线上的网站, 你可以点击浏览。</em></p>
 
-<p><a href="https://itunes.apple.com/cn/app/tao-bao/id387682726?mt=8"><strong> ★ 手机淘宝 </strong></a></p>
+<p><a target="_blank" href="https://itunes.apple.com/cn/app/tao-bao/id387682726?mt=8"><strong> ★ 手机淘宝 </strong></a></p>
 
 <pre><code>目前在淘宝 iPhone 客户端负责旺旺模块, 微淘私信, 表哥计划的开发。
 </code></pre>
@@ -194,7 +194,7 @@ sup {
 <pre><code>负责母婴客户端的宝宝库, Timeline 以及 HTTP API 层的设计和开发.
 </code></pre>
 
-<p><a href="http://www.slyfairy.com"><strong> * Deal Push </strong></a></p>
+<p><a target="_blank" href="http://www.slyfairy.com"><strong> * Deal Push </strong></a></p>
 
 <pre><code>Deal Push 使用 Node.js 编写, 通过爬虫(cheerio)抓取各大优惠推荐网站(包括一淘网, 网易惠惠, 什么值得买, 北美省钱快报等将近20个网站), 通过关键字(可在 Web 端 / iOS 客户端添加)检索出用户想要的信息并保存到数据库, 通过邮件发送, 或者通过 APNS 发送到 iOS 客户端。测试账号 friend 密码 myfriend。
 </code></pre>
@@ -204,23 +204,23 @@ sup {
 <pre><code>很简单的功能，就是通过PC Web端（并包装成Chrome插件方便使用）发送文本到 iPhone, 因为 iOS 7 支持 background refresh，所以利用这个特性可以让 App 在收到 Push 后自动粘贴数据到剪切板。
 </code></pre>
 
-<p><a href="http://www.slyfairy.com:9000"><strong> * KLMessager </strong></a></p>
+<p><a target="_blank" href="http://www.slyfairy.com:9000"><strong> * KLMessager </strong></a></p>
 
 <pre><code>使用 Socket.IO 的一个 Demo，Messager 顾名思义就是聊天，支持Web端和iPhone端。账号必须为 levey 或者 karin。
 </code></pre>
 
-<p><a href="http://itunes.apple.com/us/app/remain/id522311344?mt=8"><strong> * Remain</strong></a></p>
+<p><a target="_blank" href="http://itunes.apple.com/us/app/remain/id522311344?mt=8"><strong> * Remain</strong></a></p>
 
 <pre><code>Remain 是一个为极简主义者设计的一个记事工具。
 </code></pre>
 
-<p><a href="http://www.coderxcoder.com/"><strong> *Coder x Coder</strong></a></p>
+<p><a target="_blank" href="http://www.coderxcoder.com/"><strong> *Coder x Coder</strong></a></p>
 
 <pre><code>Coder x Coder（缩写CXC），名称借鉴Hunter x Hunter（全职猎人）。
 一个简洁的iOS 、OS X平台下的社区网站，使用Ruby on Rails。
 </code></pre>
 
-<p><a href="http://itunes.apple.com/cn/app/id487645953?mt=8"><strong> * PhotoString</strong></a></p>
+<p><a target="_blank" href="http://itunes.apple.com/cn/app/id487645953?mt=8"><strong> * PhotoString</strong></a></p>
 
 <pre><code>PhotoString 是一个图片搭上文字，并可以竖向拼接的应用程式，有4种样式可选，可为文字选择字体，有4种分辨率可供导出，并且可以分享到Facebook、Twitter、Tumblr。
 </code></pre>
@@ -235,22 +235,22 @@ sup {
 <pre><code>英文版的“相格”，可以发送到Twitter，Facebook，Tumblr。
 </code></pre>
 
-<p><a href="http://itunes.apple.com/us/app/id436715684?mt=8"><strong>手机工坊</strong></a></p>
+<p><a target="_blank" href="http://itunes.apple.com/us/app/id436715684?mt=8"><strong>手机工坊</strong></a></p>
 
 <pre><code>匹配iPhone的机型，然后切换背壳的图片，能从服务器上下载更多图片，让用户填写订单后，提交到服务器。
 </code></pre>
 
-<p><a href="http://itunes.apple.com/us/app/id421320385?mt=8"><strong>品客</strong></a></p>
+<p><a target="_blank" href="http://itunes.apple.com/us/app/id421320385?mt=8"><strong>品客</strong></a></p>
 
 <pre><code>浙江日报集团的一个项目，类似口碑网的生活类app。 
 </code></pre>
 
-<p><a href="http://itunes.apple.com/cn/app/id400852752?mt=8"><strong>都市快报</strong></a></p>
+<p><a target="_blank" href="http://itunes.apple.com/cn/app/id400852752?mt=8"><strong>都市快报</strong></a></p>
 
 <pre><code>都市快报的iPhone版,新闻类的app. 
 </code></pre>
 
-<p><a href="http://itunes.apple.com/cn/app/handbook/id432254793?mt=8"><strong>Handbook</strong></a></p>
+<p><a target="_blank" href="http://itunes.apple.com/cn/app/handbook/id432254793?mt=8"><strong>Handbook</strong></a></p>
 
 <pre><code>母公司日本Infoteria的一个长期项目，看书软件，比较大的一个项目，有后台编辑网站，我添加过一些功能和修复过一些Bug。 
 </code></pre>
@@ -295,7 +295,7 @@ sup {
 
 <p><strong>手机</strong>: +86 18667121397</p>
 
-<p><strong>邮箱</strong>: <a href="&#x6d;&#x61;&#x69;&#x6c;&#x74;&#x6f;&#x3a;&#x6c;&#101;&#x76;&#x65;&#121;&#x2e;&#x7a;&#x68;&#117;&#x40;&#103;&#x6d;&#x61;&#105;&#x6c;&#x2e;&#x63;&#111;&#109;">&#x6c;&#x65;&#x76;&#101;&#x79;&#46;&#122;&#104;&#x75;&#x40;&#x67;&#x6d;&#97;&#x69;&#108;&#x2e;&#x63;&#111;&#109;</a></p>
+<p><strong>邮箱</strong>: <a target="_blank" href="&#x6d;&#x61;&#x69;&#x6c;&#x74;&#x6f;&#x3a;&#x6c;&#101;&#x76;&#x65;&#121;&#x2e;&#x7a;&#x68;&#117;&#x40;&#103;&#x6d;&#x61;&#105;&#x6c;&#x2e;&#x63;&#111;&#109;">&#x6c;&#x65;&#x76;&#101;&#x79;&#46;&#122;&#104;&#x75;&#x40;&#x67;&#x6d;&#97;&#x69;&#108;&#x2e;&#x63;&#111;&#109;</a></p>
 
 <p><strong>QQ</strong>: 286837453</p>
 
