--- a/resume_cn.html
+++ b/resume_cn.html
@@ -162,7 +162,7 @@ sup {
 <body>
 <h4>朱建刚</h4>
 
-<p>一个26岁的iOS软件开发者。</p>
+<p>一个26岁的 iOS 软件开发者。</p>
 
 <hr />
 
@@ -201,12 +201,12 @@ sup {
 
 <p><strong> * Paste Push </strong></p>
 
-<pre><code>很简单的功能，就是通过PC Web端（并包装成Chrome插件方便使用）发送文本到 iPhone, 因为 iOS 7 支持 background refresh，所以利用这个特性可以让 App 在收到 Push 后自动粘贴数据到剪切板。
+<pre><code>很简单的功能，就是通过 PC Web 端（并包装成Chrome插件方便使用）发送文本到 iPhone, 因为 iOS 7 支持 background refresh，所以利用这个特性可以让 App 在收到 Push 后自动粘贴数据到剪切板。
 </code></pre>
 
 <p><a target="_blank" href="http://www.slyfairy.com:9000"><strong> * KLMessager </strong></a></p>
 
-<pre><code>使用 Socket.IO 的一个 Demo，Messager 顾名思义就是聊天，支持Web端和iPhone端。账号必须为 levey 或者 karin。
+<pre><code>使用 Socket.IO 的一个 Demo，Messager 顾名思义就是聊天，支持 Web 端和 iPhone 端。账号必须为 levey 或者 karin。
 </code></pre>
 
 <p><a target="_blank" href="http://itunes.apple.com/us/app/remain/id522311344?mt=8"><strong> * Remain</strong></a></p>
@@ -217,62 +217,62 @@ sup {
 <p><a target="_blank" href="http://www.coderxcoder.com/"><strong> *Coder x Coder</strong></a></p>
 
 <pre><code>Coder x Coder（缩写CXC），名称借鉴Hunter x Hunter（全职猎人）。
-一个简洁的iOS 、OS X平台下的社区网站，使用Ruby on Rails。
+一个简洁的 iOS 、OS X 平台下的社区网站，使用 Ruby on Rails。
 </code></pre>
 
 <p><a target="_blank" href="http://itunes.apple.com/cn/app/id487645953?mt=8"><strong> * PhotoString</strong></a></p>
 
-<pre><code>PhotoString 是一个图片搭上文字，并可以竖向拼接的应用程式，有4种样式可选，可为文字选择字体，有4种分辨率可供导出，并且可以分享到Facebook、Twitter、Tumblr。
+<pre><code>PhotoString 是一个图片搭上文字，并可以竖向拼接的应用程式，有4种样式可选，可为文字选择字体，有4种分辨率可供导出，并且可以分享到 Facebook、Twitter、Tumblr。
 </code></pre>
 
 <p><strong>相格</strong></p>
 
-<pre><code>一个拼接图片的app，用户可以选择几张的照片（或者拍几张），拼合起来，摇一摇还可以打乱顺序重新生成图片，可切换相框和背景。可发送到腾讯微博,新浪微博和人人网。 
+<pre><code>一个拼接图片的 app，用户可以选择几张的照片（或者拍几张），拼合起来，摇一摇还可以打乱顺序重新生成图片，可切换相框和背景。可发送到腾讯微博,新浪微博和人人网。 
 </code></pre>
 
 <p><strong>Shange</strong></p>
 
-<pre><code>英文版的“相格”，可以发送到Twitter，Facebook，Tumblr。
+<pre><code>英文版的“相格”，可以发送到 Twitter，Facebook，Tumblr。
 </code></pre>
 
 <p><a target="_blank" href="http://itunes.apple.com/us/app/id436715684?mt=8"><strong>手机工坊</strong></a></p>
 
-<pre><code>匹配iPhone的机型，然后切换背壳的图片，能从服务器上下载更多图片，让用户填写订单后，提交到服务器。
+<pre><code>匹配 iPhone 的机型，然后切换背壳的图片，能从服务器上下载更多图片，让用户填写订单后，提交到服务器。
 </code></pre>
 
 <p><a target="_blank" href="http://itunes.apple.com/us/app/id421320385?mt=8"><strong>品客</strong></a></p>
 
-<pre><code>浙江日报集团的一个项目，类似口碑网的生活类app。 
+<pre><code>浙江日报集团的一个项目，类似口碑网的生活类 app。 
 </code></pre>
 
 <p><a target="_blank" href="http://itunes.apple.com/cn/app/id400852752?mt=8"><strong>都市快报</strong></a></p>
 
-<pre><code>都市快报的iPhone版,新闻类的app. 
+<pre><code>都市快报的 iPhone 版,新闻类的 app. 
 </code></pre>
 
 <p><a target="_blank" href="http://itunes.apple.com/cn/app/handbook/id432254793?mt=8"><strong>Handbook</strong></a></p>
 
-<pre><code>母公司日本Infoteria的一个长期项目，看书软件，比较大的一个项目，有后台编辑网站，我添加过一些功能和修复过一些Bug。 
+<pre><code>母公司日本 Infoteria 的一个长期项目，看书软件，比较大的一个项目，有后台编辑网站，我添加过一些功能和修复过一些 Bug。 
 </code></pre>
 
 <p><strong>Power GIS</strong></p>
 
-<pre><code>杭州电力局的GIS系统，显示，搜索杭州电力局的设备（如配电站，电缆箱，变电站等），并在MapView上显示，并作性能优化，如移除不在屏幕内的的自定义大头针(annotation)，使app在iPad上有良好的UE。这个app设计组做的很漂亮，可惜是客户的，最终没上架！
+<pre><code>杭州电力局的 GIS 系统，显示，搜索杭州电力局的设备（如配电站，电缆箱，变电站等），并在MapView上显示，并作性能优化，如移除不在屏幕内的的自定义大头针(annotation)，使 app 在 iPad 上有良好的体验。
 </code></pre>
 
 <p><strong>台州联通汽车手机生活</strong></p>
 
-<pre><code>台州联通的一个项目，页面比较多，但是通过OO的设计可以重用很多部分，所以也还比较简单。 
+<pre><code>台州联通的一个项目，页面比较多，但是通过 OO 的设计可以重用很多部分，所以也还比较简单。 
 </code></pre>
 
 <p><strong>哈根达斯点单客户端</strong></p>
 
-<pre><code>哈根达斯的点餐应用，用这个demo成功拿下这个项目。iPod touch 4上用的，供服务员扫描菜单上的二维码，然后发送订单给服务器，自动完成订单。
+<pre><code>哈根达斯的点餐应用，用这个 demo 成功拿下这个项目。iPod touch 4上用的，供服务员扫描菜单上的二维码，然后发送订单给服务器，自动完成订单。
 </code></pre>
 
 <p><strong>蓝牙猜拳</strong></p>
 
-<pre><code>这又是一个小app,其实此类App早已泛滥，这是我刚开始接触iPhone开发自己做个玩的。顾名思义就是猜拳，当然，首先用蓝牙配对，然后用户就可以甩动iPhone（重力感应）猜拳了，有统计分数，隐藏作弊等功能。
+<pre><code>这又是一个小app,其实此类App早已泛滥，这是我刚开始接触 iPhone 开发自己做个玩的。顾名思义就是猜拳，当然，首先用蓝牙配对，然后用户就可以甩动iPhone（重力感应）猜拳了，有统计分数，隐藏作弊等功能。
 </code></pre>
 
 <p>…...</p>
