--- a/resume_cn.html
+++ b/resume_cn.html
@@ -184,7 +184,7 @@ sup {
 
 <p><em>如果标题为蓝色链接，说明此 App 已在 App Store 上，或者部署在线上的网站, 你可以点击浏览。</em></p>
 
-<p><a target="_blank" href="https://itunes.apple.com/cn/app/tao-bao/id387682726?mt=8"><strong> ★ 手机淘宝 </strong></a></p>
+<p><a target="_blank" href="https://itunes.Apple.com/cn/App/tao-bao/id387682726?mt=8"><strong> ★ 手机淘宝 </strong></a></p>
 
 <pre><code>目前在淘宝 iPhone 客户端负责旺旺模块, 微淘私信, 表哥计划的开发。
 </code></pre>
@@ -209,7 +209,7 @@ sup {
 <pre><code>使用 Socket.IO 的一个 Demo，Messager 顾名思义就是聊天，支持 Web 端和 iPhone 端。账号必须为 levey 或者 karin。
 </code></pre>
 
-<p><a target="_blank" href="http://itunes.apple.com/us/app/remain/id522311344?mt=8"><strong> * Remain</strong></a></p>
+<p><a target="_blank" href="http://itunes.Apple.com/us/App/remain/id522311344?mt=8"><strong> * Remain</strong></a></p>
 
 <pre><code>Remain 是一个为极简主义者设计的一个记事工具。
 </code></pre>
@@ -220,14 +220,14 @@ sup {
 一个简洁的 iOS 、OS X 平台下的社区网站，使用 Ruby on Rails。
 </code></pre>
 
-<p><a target="_blank" href="http://itunes.apple.com/cn/app/id487645953?mt=8"><strong> * PhotoString</strong></a></p>
+<p><a target="_blank" href="http://itunes.Apple.com/cn/App/id487645953?mt=8"><strong> * PhotoString</strong></a></p>
 
 <pre><code>PhotoString 是一个图片搭上文字，并可以竖向拼接的应用程式，有4种样式可选，可为文字选择字体，有4种分辨率可供导出，并且可以分享到 Facebook、Twitter、Tumblr。
 </code></pre>
 
 <p><strong>相格</strong></p>
 
-<pre><code>一个拼接图片的 app，用户可以选择几张的照片（或者拍几张），拼合起来，摇一摇还可以打乱顺序重新生成图片，可切换相框和背景。可发送到腾讯微博,新浪微博和人人网。 
+<pre><code>一个拼接图片的 App，用户可以选择几张的照片（或者拍几张），拼合起来，摇一摇还可以打乱顺序重新生成图片，可切换相框和背景。可发送到腾讯微博,新浪微博和人人网。 
 </code></pre>
 
 <p><strong>Shange</strong></p>
@@ -235,29 +235,29 @@ sup {
 <pre><code>英文版的“相格”，可以发送到 Twitter，Facebook，Tumblr。
 </code></pre>
 
-<p><a target="_blank" href="http://itunes.apple.com/us/app/id436715684?mt=8"><strong>手机工坊</strong></a></p>
+<p><a target="_blank" href="http://itunes.Apple.com/us/App/id436715684?mt=8"><strong>手机工坊</strong></a></p>
 
 <pre><code>匹配 iPhone 的机型，然后切换背壳的图片，能从服务器上下载更多图片，让用户填写订单后，提交到服务器。
 </code></pre>
 
-<p><a target="_blank" href="http://itunes.apple.com/us/app/id421320385?mt=8"><strong>品客</strong></a></p>
+<p><a target="_blank" href="http://itunes.Apple.com/us/App/id421320385?mt=8"><strong>品客</strong></a></p>
 
-<pre><code>浙江日报集团的一个项目，类似口碑网的生活类 app。 
+<pre><code>浙江日报集团的一个项目，类似口碑网的生活类 App.
 </code></pre>
 
-<p><a target="_blank" href="http://itunes.apple.com/cn/app/id400852752?mt=8"><strong>都市快报</strong></a></p>
+<p><a target="_blank" href="http://itunes.Apple.com/cn/App/id400852752?mt=8"><strong>都市快报</strong></a></p>
 
-<pre><code>都市快报的 iPhone 版,新闻类的 app. 
+<pre><code>都市快报的 iPhone 版,新闻类的 App.
 </code></pre>
 
-<p><a target="_blank" href="http://itunes.apple.com/cn/app/handbook/id432254793?mt=8"><strong>Handbook</strong></a></p>
+<p><a target="_blank" href="http://itunes.Apple.com/cn/App/handbook/id432254793?mt=8"><strong>Handbook</strong></a></p>
 
-<pre><code>母公司日本 Infoteria 的一个长期项目，看书软件，比较大的一个项目，有后台编辑网站，我添加过一些功能和修复过一些 Bug。 
+<pre><code>母公司日本 Infoteria 的一个长期项目，看书软件，比较大的一个项目，有后台编辑网站，我添加过一些功能和修复过一些 Bug.
 </code></pre>
 
 <p><strong>Power GIS</strong></p>
 
-<pre><code>杭州电力局的 GIS 系统，显示，搜索杭州电力局的设备（如配电站，电缆箱，变电站等），并在MapView上显示，并作性能优化，如移除不在屏幕内的的自定义大头针(annotation)，使 app 在 iPad 上有良好的体验。
+<pre><code>杭州电力局的 GIS 系统，显示，搜索杭州电力局的设备（如配电站，电缆箱，变电站等），并在MapView上显示，并作性能优化，如移除不在屏幕内的的自定义大头针(annotation)，使 App 在 iPad 上有良好的体验。
 </code></pre>
 
 <p><strong>台州联通汽车手机生活</strong></p>
@@ -272,7 +272,7 @@ sup {
 
 <p><strong>蓝牙猜拳</strong></p>
 
-<pre><code>这又是一个小app,其实此类App早已泛滥，这是我刚开始接触 iPhone 开发自己做个玩的。顾名思义就是猜拳，当然，首先用蓝牙配对，然后用户就可以甩动iPhone（重力感应）猜拳了，有统计分数，隐藏作弊等功能。
+<pre><code>这又是一个小 App,其实此类应用早已泛滥，这是我刚开始接触 iPhone 开发自己做个玩的。顾名思义就是猜拳，当然，首先用蓝牙配对，然后用户就可以甩动iPhone（重力感应）猜拳了，有统计分数，隐藏作弊等功能。
 </code></pre>
 
 <p>…...</p>
