--- a/resume_cn.html
+++ b/resume_cn.html
@@ -191,12 +191,12 @@ sup {
 
 <p><strong>淘宝母婴客户端</strong></p>
 
-<pre><code>负责母婴客户端的宝宝库, Timeline 以及 HTTP API 层的设计和开发.
+<pre><code>负责母婴客户端的宝宝库, Timeline 以及 HTTP API 层的设计和开发。
 </code></pre>
 
 <p><a target="_blank" href="http://www.slyfairy.com"><strong> * Deal Push </strong></a></p>
 
-<pre><code>Deal Push 使用 Node.js 编写, 通过爬虫(cheerio)抓取各大优惠推荐网站(包括一淘网, 网易惠惠, 什么值得买, 北美省钱快报等将近20个网站), 通过关键字(可在 Web 端 / iOS 客户端添加)检索出用户想要的信息并保存到数据库, 通过邮件发送, 或者通过 APNS 发送到 iOS 客户端。测试账号 friend 密码 myfriend。
+<pre><code>Deal Push 使用 Node.js 编写, 通过爬虫(cheerio)抓取各大优惠推荐网站(包括一淘网, 网易惠惠, 什么值得买, 北美省钱快报等将近20个网站), 通过关键字(可在 Web 端 / iOS 客户端添加)检索出用户想要的信息并保存到数据库, 通过邮件发送, 或者通过 APNS 发送到 iOS 客户端。测试账号 friend 密码 myfriend.
 </code></pre>
 
 <p><strong> * Paste Push </strong></p>
@@ -206,7 +206,7 @@ sup {
 
 <p><a target="_blank" href="http://www.slyfairy.com:9000"><strong> * KLMessager </strong></a></p>
 
-<pre><code>使用 Socket.IO 的一个 Demo，Messager 顾名思义就是聊天，支持 Web 端和 iPhone 端。账号必须为 levey 或者 karin。
+<pre><code>使用 Socket.IO 的一个 Demo，Messager 顾名思义就是聊天，支持 Web 端和 iPhone 端。账号必须为 levey 或者 karin.
 </code></pre>
 
 <p><a target="_blank" href="http://itunes.apple.com/us/app/remain/id522311344?mt=8"><strong> * Remain</strong></a></p>
@@ -216,8 +216,8 @@ sup {
 
 <p><a target="_blank" href="http://www.coderxcoder.com/"><strong> * Coder x Coder</strong></a></p>
 
-<pre><code>Coder x Coder（缩写CXC），名称借鉴Hunter x Hunter（全职猎人）。
-一个简洁的 iOS 、OS X 平台下的社区网站，使用 Ruby on Rails。
+<pre><code>Coder x Coder（缩写CXC），名称借鉴 Hunter x Hunter, 
+一个简洁的 iOS 、OS X 平台下的社区网站，使用 Ruby on Rails.
 </code></pre>
 
 <p><a target="_blank" href="http://itunes.apple.com/cn/app/id487645953?mt=8"><strong> * PhotoString</strong></a></p>
