--- a/cv.html
+++ b/cv.html
@@ -226,12 +226,12 @@ An iOS 、OS X development forum, hosting on Heroku, little and clean, build wit
 <pre><code>PhotoString is an app for people who like put many photos together vertically, just combine multi photos into one like a string.When you finish the photos, you can save it, send it via Email, or share it to Facebook, Twitter and Tumblr.
 </code></pre>
 
-<p><a href="http://itunes.apple.com/cn/app/id415605786?mt=8"><strong>XiangGe</strong></a></p>
+<p><strong>XiangGe</strong></p>
 
 <pre><code>An app to merge photoes, user can select several photos to make it to be one. then shake the phone to reorder the photoes, some nice frames are also supported! and share it to Tencent MicroBlog, Sina MicroBlog and Renren. 
 </code></pre>
 
-<p><a href="http://itunes.apple.com/us/app/shange/id455910387?mt=8"><strong>Shange</strong></a></p>
+<p><strong>Shange</strong></p>
 
 <pre><code>English version of "XiangGe", just changed the sharing methods, it support sharing to Facebook, Twitter, Tumblr.
 </code></pre>
