--- a/resume.html
+++ b/resume.html
@@ -246,7 +246,7 @@ sup {
 <pre><code>Remain is a productive tool designed for minimalist, just like the interface, plain and easy to use.
 </code></pre>
 
-<p><a href="http://coderxcoder.com/"><strong> * Coder x Coder</strong></a></p>
+<p><a href="http://coderxcoder.herokuapp.com/"><strong> * Coder x Coder</strong></a></p>
 
 <pre><code>Coder x Coder（CxC），name likes Hunter x Hunter.
 An iOS 、OS X development forum, hosting on Heroku, little and clean, build with Ruby on Rails when I was learning it.
@@ -329,6 +329,6 @@ An iOS 、OS X development forum, hosting on Heroku, little and clean, build wit
 
 <p><strong>M(US)</strong>. +1 (917)302-2403</p>
 
-<p><strong>Email</strong>. <a href="&#109;&#x61;&#x69;&#108;&#116;&#111;&#58;&#108;&#101;&#118;&#101;&#x79;&#46;&#x7a;&#104;&#117;&#64;&#103;&#109;&#x61;&#105;&#108;&#46;&#99;&#x6f;&#x6d;">&#x6c;&#x65;&#118;&#x65;&#121;&#x2e;&#122;&#x68;&#x75;&#x40;&#103;&#109;&#x61;&#105;&#108;&#x2e;&#x63;&#111;&#109;</a></p>
+<p><strong>Email</strong>. <a href="&#109;&#97;&#105;&#108;&#x74;&#111;&#58;&#x6c;&#x65;&#118;&#101;&#x79;&#x2e;&#x7a;&#104;&#117;&#x40;&#103;&#x6d;&#97;&#x69;&#x6c;&#x2e;&#99;&#111;&#x6d;">&#x6c;&#101;&#118;&#101;&#121;&#46;&#122;&#104;&#x75;&#x40;&#103;&#x6d;&#x61;&#105;&#108;&#x2e;&#x63;&#x6f;&#109;</a></p>
 </body>
 </html>
