Update personal information

--- a/cv.html
+++ b/cv.html
@@ -216,6 +216,11 @@ sup {
 <pre><code>Work on common framework for several projects, mobile express pay popup module for internal/external apps.
 </code></pre>
 
+<p><strong>Proxy Switcher</strong></p>
+
+<pre><code>Chinses networking is very annoying, write a tiny app for switching system proxy, it provide a menu in status bar of OS X, turn on/off feature with invoking system command to connect remote server with SSH -D then toogle socks proxy setting.
+</code></pre>
+
 <p><a href="https://itunes.apple.com/cn/app/tao-bao/id387682726?mt=8"><strong> Taobao</strong> </a></p>
 
 <pre><code>Taobao.com is the largest C2C marketing site in China. I'm currently a member of the wireless team that building the mobile client of Taobao.com. I'm working on a instant messaging moudle called wangwang and feed feature called weitao of it's iPhone client. I also do some improvement works of the SDK in business layer of this client.
@@ -329,6 +334,6 @@ An iOS 、OS X development forum, hosting on Heroku, little and clean, build wit
 
 <p><strong>M(US)</strong>. +1 (917)302-2403</p>
 
-<p><strong>Email</strong>. <a href="&#109;&#97;&#105;&#108;&#x74;&#111;&#58;&#x6c;&#x65;&#118;&#101;&#x79;&#x2e;&#x7a;&#104;&#117;&#x40;&#103;&#x6d;&#97;&#x69;&#x6c;&#x2e;&#99;&#111;&#x6d;">&#x6c;&#101;&#118;&#101;&#121;&#46;&#122;&#104;&#x75;&#x40;&#103;&#x6d;&#x61;&#105;&#108;&#x2e;&#x63;&#x6f;&#109;</a></p>
+<p><strong>Email</strong>. <a href="&#x6d;&#x61;&#105;&#x6c;&#116;&#x6f;&#58;&#108;&#101;&#118;&#x65;&#x79;&#x2e;&#x7a;&#x68;&#117;&#64;&#x67;&#x6d;&#x61;&#105;&#108;&#x2e;&#x63;&#111;&#x6d;">&#x6c;&#x65;&#x76;&#101;&#x79;&#46;&#122;&#x68;&#117;&#64;&#103;&#109;&#97;&#105;&#108;&#46;&#x63;&#111;&#x6d;</a></p>
 </body>
 </html>
