Update personal information

--- a/cv.html
+++ b/cv.html
@@ -216,7 +216,7 @@ sup {
 <pre><code>Work on common framework for several projects, mobile express pay popup module for internal/external apps.
 </code></pre>
 
-<p><strong>Proxy Switcher</strong></p>
+<p><strong>Proxy Switcher for OS X</strong></p>
 
 <pre><code>Chinses networking is very annoying, write a tiny app for switching system proxy, it provide a menu in status bar of OS X, turn on/off feature with invoking system command to connect remote server with SSH -D then toogle socks proxy setting.
 </code></pre>
@@ -334,6 +334,6 @@ An iOS 、OS X development forum, hosting on Heroku, little and clean, build wit
 
 <p><strong>M(US)</strong>. +1 (917)302-2403</p>
 
-<p><strong>Email</strong>. <a href="&#x6d;&#x61;&#105;&#x6c;&#116;&#x6f;&#58;&#108;&#101;&#118;&#x65;&#x79;&#x2e;&#x7a;&#x68;&#117;&#64;&#x67;&#x6d;&#x61;&#105;&#108;&#x2e;&#x63;&#111;&#x6d;">&#x6c;&#x65;&#x76;&#101;&#x79;&#46;&#122;&#x68;&#117;&#64;&#103;&#109;&#97;&#105;&#108;&#46;&#x63;&#111;&#x6d;</a></p>
+<p><strong>Email</strong>. <a href="&#x6d;&#97;&#x69;&#x6c;&#116;&#x6f;&#58;&#108;&#x65;&#118;&#101;&#x79;&#x2e;&#122;&#104;&#117;&#x40;&#x67;&#109;&#x61;&#x69;&#x6c;&#x2e;&#99;&#111;&#109;">&#108;&#101;&#x76;&#x65;&#x79;&#46;&#122;&#104;&#117;&#64;&#x67;&#109;&#97;&#105;&#108;&#46;&#99;&#111;&#x6d;</a></p>
 </body>
 </html>
